# 2048

./: CMakeLists.txt  README.md
RAPPORT/: rapport.tex
include/: file.h
src/: CMakeLists.txt
src/2048-ncurses/: CMakeLists.txt  main.c
src/2048-sdl/: CMakeLists.txt  main.c  score.c  score.h
src/2048-sdl/font/: Megalopolis.ttf.h  UbuntuTitle.ttf.h
src/2048-sdl/img/: 2048-1024.bmp.h  2048-128.bmp.h  2048-16.bmp.h  2048-16384.bmp.h  2048-2.bmp.h  2048-2048.bmp.h  2048-256.bmp.h  2048-32.bmp.h  2048-32768.bmp.h  2048-4.bmp.h  2048-4096.bmp.h  2048-512.bmp.h  2048-64.bmp.h  2048-8.bmp.h  2048-8192.bmp.h  grid.bmp.h  logo.bmp.h
src/2048-sdl/score_server/: README  highscores.txt  score.php
src/file/: CMakeLists.txt  file.c
src/grid/: CMakeLists.txt  grid.c
src/grid/tests/: CMakeLists.txt  test-grid1.c  test-grid2.c  test-grid3.c  test-grid4.c  test-grid5.c
src/strategy/strategy1/: Makefile  grid.h  strategy1.c
src/strategy/strategy2/: Makefile  strategy.c  strategy.h
